#add_executable(test_client main_client.cpp)
add_executable(test_data_buffer main_data_buffer.cpp)
#add_executable(test_memento main_memento.cpp)
#add_executable(test_observer main_observer.cpp)
#add_executable(test_perlin_2D main_perlin_2D.cpp)
#add_executable(test_persistent_worker main_persistant_worker.cpp)
add_executable(test_pool main_pool.cpp)
#add_executable(test_random_2D_coordinate_generator main_random_2D_coordinate_generator.cpp)
#add_executable(test_server main_server.cpp)
#add_executable(test_singleton main_singleton.cpp)
#add_executable(test_state_machine main_state_machine.cpp)
#add_executable(test_thread main_thread.cpp)
#add_executable(test_thread_safe_iostream main_thread_safe_iostream.cpp)
#add_executable(test_thread_safe_queue main_thread_safe_queue.cpp)
#add_executable(test_vector_2 main_vector_2.cpp)
#add_executable(test_vector_3 main_vector_3.cpp)
#add_executable(test_worker_pool main_worker_pool.cpp)

target_link_libraries(test_data_buffer PRIVATE libftpp)
target_link_libraries(test_pool PRIVATE libftpp)

add_test(NAME test_data_buffer COMMAND test_data_buffer)
add_test(NAME test_pool COMMAND test_pool)

