add_executable(test_client main_client.cpp)
add_executable(test_data_buffer main_data_buffer.cpp)
add_executable(test_memento main_memento.cpp)
add_executable(test_observer main_observer.cpp)
#add_executable(test_perlin_2D main_perlin_2D.cpp)
add_executable(test_persistent_worker main_persistant_worker.cpp)
add_executable(test_pool main_pool.cpp)
#add_executable(test_random_2D_coordinate_generator main_random_2D_coordinate_generator.cpp)
add_executable(test_server main_server.cpp)
add_executable(test_singleton main_singleton.cpp)
add_executable(test_state_machine main_state_machine.cpp)
add_executable(test_thread main_thread.cpp)
add_executable(test_thread_safe_iostream main_thread_safe_iostream.cpp)
add_executable(test_thread_safe_queue main_thread_safe_queue.cpp)
#add_executable(test_vector_2 main_vector_2.cpp)
#add_executable(test_vector_3 main_vector_3.cpp)
add_executable(test_worker_pool main_worker_pool.cpp)

target_link_libraries(test_client PRIVATE libftpp)
target_link_libraries(test_data_buffer PRIVATE libftpp)
target_link_libraries(test_memento PRIVATE libftpp)
target_link_libraries(test_observer PRIVATE libftpp)
#target_link_libraries(test_perlin_2D PRIVATE libftpp)
target_link_libraries(test_persistent_worker PRIVATE libftpp)
target_link_libraries(test_pool PRIVATE libftpp)
#target_link_libraries(test_random_2D_coordinate_generator PRIVATE libftpp)
target_link_libraries(test_server PRIVATE libftpp)
target_link_libraries(test_singleton PRIVATE libftpp)
target_link_libraries(test_state_machine PRIVATE libftpp)
target_link_libraries(test_thread PRIVATE libftpp)
target_link_libraries(test_thread_safe_iostream PRIVATE libftpp)
target_link_libraries(test_thread_safe_queue PRIVATE libftpp)
#target_link_libraries(test_vector_2 PRIVATE libftpp)
#target_link_libraries(test_vector_3 PRIVATE libftpp)
target_link_libraries(test_worker_pool PRIVATE libftpp)

add_test(NAME test_client COMMAND test_client)
add_test(NAME test_data_buffer COMMAND test_data_buffer)
add_test(NAME test_memento COMMAND test_memento)
add_test(NAME test_observer COMMAND test_observer)
#add_test(NAME test_perlin_2D COMMAND test_perlin_2D)
add_test(NAME test_persistent_worker COMMAND test_persistent_worker)
add_test(NAME test_pool COMMAND test_pool)
#add_test(NAME test_random_2D_coordinate_generator COMMAND test_random_2D_coordinate_generator)
add_test(NAME test_server COMMAND test_server)
add_test(NAME test_singleton COMMAND test_singleton)
add_test(NAME test_state_machine COMMAND test_state_machine)
add_test(NAME test_thread COMMAND test_thread)
add_test(NAME test_thread_safe_iostream COMMAND test_thread_safe_iostream)
add_test(NAME test_thread_safe_queue COMMAND test_thread_safe_queue)
#add_test(NAME test_vector_2 COMMAND test_vector_2)
#add_test(NAME test_vector_3 COMMAND test_vector_3)
add_test(NAME test_worker_pool COMMAND test_worker_pool)